# eden

./: .gitignore  Cargo.toml  LICENSE  Makefile  Overview.md  README.md  ReadME.md  eden.example.toml  nextest.toml
benchmark/ai-workload/: Cargo.toml
benchmark/ai-workload/src/: lib.rs  main.rs
benchmark/cacophony/: Cargo.toml  README.md
benchmark/cacophony/src/: arrival.rs  backend.rs  connection.rs  lib.rs  main.rs  recorder.rs  scenario.rs
database/: Cargo.toml  build.rs
database/analytics_schema/: Cargo.toml
database/analytics_schema/src/: connection_metrics.rs  ddl.rs  discovery.rs  events.rs  infrastructure.rs  lib.rs  llm.rs  poll.rs  telemetry.rs  wire.rs
database/ch-push/: Cargo.toml
database/ch-push/src/: batch.rs  circuit_breaker.rs  lib.rs  retry.rs  stats.rs
database/src/: lib.rs  stc.rs  test_utils.rs
eden_alerts/: Cargo.toml  config.example.toml
eden_alerts/src/: config.rs  lib.rs  main.rs  service.rs
eden_config/: Cargo.toml  README.md
eden_config/src/: agents.rs  analytics.rs  backups.rs  cli.rs  compat.rs  databases.rs  encryption.rs  error.rs  features.rs  lib.rs  licensing.rs  limits.rs  marketplace.rs  memory.rs  org_transfer.rs  rbac_pg_sync.rs  services.rs  telemetry.rs
eden_core/: Cargo.toml  build.rs
eden_core/auth/: Cargo.toml
eden_core/block/: Cargo.toml
eden_core/comm/: Cargo.toml
eden_core/db/: Cargo.toml
eden_core/eden_logger/: Cargo.toml
eden_core/eden_logger_internal/: Cargo.toml
eden_core/eden_logger_macros/: Cargo.toml
eden_core/error/: Cargo.toml  README.md
eden_core/format/: Cargo.toml
eden_core/json/: Cargo.toml
eden_core/metrics_derive_macro/: Cargo.toml
eden_core/node/: Cargo.toml
eden_core/proto/: Cargo.toml  proto.proto
eden_core/request/: Cargo.toml
eden_core/response/: Cargo.toml
eden_core/src/: lib.rs
eden_core/telemetry/: Cargo.toml
eden_core/telemetry-exporters/: Cargo.toml
eden_core/telemetry-macro/: Cargo.toml
eden_gateway/: Cargo.toml  README.md
eden_gateway/agent/: Cargo.toml
eden_gateway/core/: Cargo.toml
eden_gateway/llm/: Cargo.toml
eden_gateway/mongo/: Cargo.toml
eden_gateway/postgres/: Cargo.toml  build.rs
eden_gateway/redis/: Cargo.toml
eden_gateway/src/: bridge.rs  gateway_telemetry.rs  lib.rs  processor.rs  protocol.rs  replication.rs  validation.rs
eden_service/: Cargo.toml  build.rs
eden_service/src/: api_usage_middleware.rs  apidocs.rs  auth.rs  backup_restore.rs  comm.rs  config.rs  connection_metrics_aggregation.rs  data.rs  gateway_test_local.rs  jwt_blacklist.rs  lib.rs  main.rs  rate_limiter.rs  runtime_affinity.rs  seed_skills.rs  test_utils.rs  user_sessions.rs  webui.rs
eden_service/telemetry-extensions-macro/: Cargo.toml
eden_service/tests/: analytics_series.rs  api_admin_auth.rs  api_org_users.rs  api_rbac.rs  endpoint_interlay.rs  interlay_runtime.rs  llm_gateway_requests.rs  llm_gateway_suite.rs  templates_workflows.rs  webui_embedded.rs
endpoint-core/: Cargo.toml
endpoint-core/aws-core/: Cargo.toml
endpoint-core/azure-core/: Cargo.toml
endpoint-core/cassandra-core/: Cargo.toml
endpoint-core/clickhouse-core/: Cargo.toml
endpoint-core/databricks-core/: Cargo.toml
endpoint-core/datadog-core/: Cargo.toml
endpoint-core/endpoint-schema/: Cargo.toml
endpoint-core/ep-core/: Cargo.toml
endpoint-core/eraser-core/: Cargo.toml
endpoint-core/function-core/: Cargo.toml
endpoint-core/gitlab-core/: Cargo.toml
endpoint-core/gworkspace-core/: Cargo.toml
endpoint-core/http-core/: Cargo.toml
endpoint-core/llm-core/: Cargo.toml
endpoint-core/mongo-core/: Cargo.toml
endpoint-core/mssql-core/: Cargo.toml
endpoint-core/mysql-core/: Cargo.toml
endpoint-core/oracle-core/: Cargo.toml
endpoint-core/pinecone-core/: Cargo.toml
endpoint-core/postgres-core/: Cargo.toml
endpoint-core/posthog-core/: Cargo.toml
endpoint-core/redis-core/: Cargo.toml
endpoint-core/s3-core/: Cargo.toml
endpoint-core/salesforce-core/: Cargo.toml
endpoint-core/snowflake-core/: Cargo.toml
endpoint-core/src/: endpoint.rs  lib.rs  schema.rs
endpoint-core/tavily-core/: Cargo.toml
endpoint-core/weaviate-core/: Cargo.toml
endpoints/: Cargo.toml
endpoints/aws/: Cargo.toml  README.md
endpoints/azure/: Cargo.toml
endpoints/cassandra/: Cargo.toml
endpoints/clickhouse/: Cargo.toml
endpoints/core/: Cargo.toml
endpoints/databricks/: Cargo.toml
endpoints/datadog/: Cargo.toml
endpoints/elasticache/: Cargo.toml
endpoints/endpoint-derive/: Cargo.toml
endpoints/endpoint-openapi/: Cargo.toml
endpoints/endpoint-test-utils/: Cargo.toml
endpoints/endpoint-types/: Cargo.toml  build.rs
endpoints/eraser/: Cargo.toml
endpoints/function/: Cargo.toml
endpoints/gitlab/: Cargo.toml
endpoints/gworkspace/: Cargo.toml
endpoints/http/: Cargo.toml
endpoints/llm/: Cargo.toml
endpoints/mongo/: Cargo.toml
endpoints/mssql/: Cargo.toml
endpoints/mysql/: Cargo.toml
endpoints/oracle/: Cargo.toml
endpoints/pinecone/: Cargo.toml
endpoints/postgres/: Cargo.toml  build.rs
endpoints/posthog/: Cargo.toml
endpoints/rds/: Cargo.toml
endpoints/redis/: Cargo.toml
endpoints/s3/: Cargo.toml  README.md
endpoints/salesforce/: Cargo.toml
endpoints/snowflake/: Cargo.toml
endpoints/src/: lib.rs
endpoints/tavily/: Cargo.toml
endpoints/weaviate/: Cargo.toml
ep-runtime/: Cargo.toml  build.rs
ep-runtime/src/: comp.rs  lib.rs  test_utils.rs
load_balancer/: Cargo.toml
load_balancer/src/: config.rs  load_balancer.rs  main.rs  telemetry.rs
replayd/: ARCHITECTURE.md  Cargo.toml  README.md
replayd/src/: backend.rs  lib.rs  main.rs  pcap.rs  replay.rs  util.rs
wire-protocol/: Cargo.toml
wire-protocol/clickhouse-wire/: Cargo.toml
wire-protocol/mongo-wire/: Cargo.toml  doc.md
wire-protocol/mysql-wire/: Cargo.toml
wire-protocol/oracle-wire/: Cargo.toml
wire-protocol/postgres-wire/: Cargo.toml
wire-protocol/resp-wire/: Cargo.toml  blog.md
wire-protocol/src/: lib.rs
wire-protocol/sybase-wire/: Cargo.toml
wire-protocol/weaviate-wire/: Cargo.toml
wire-protocol/wire-stream/: Cargo.toml
(+6099 files in other folders)
