[workspace]
members = [
    "eden_config",
    "eden_core",
    "eden_core/eden_logger_internal",
    "eden_core/telemetry-exporters",
    "eden_gateway",
    "eden_gateway/agent",
    "eden_gateway/core",
    "eden_gateway/llm",
    "eden_gateway/redis",
    "eden_gateway/postgres",
    "eden_gateway/mongo",
    "eden_service",
    "ep-runtime",
    "database",
    "database/analytics_schema",
    "database/ch-push",
    "load_balancer",
    "endpoints",
    "endpoint-core",
    "endpoint-core/endpoint-schema",
    "eden_alerts",
    "replayd",
    "eden_portswitch",
    "wire-protocol",
    "benchmark/cacophony",
    "benchmark/ai-workload",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
license = "Apache-2.0"

[patch.crates-io]


[workspace.dependencies]
cron = "0.15"
# local dependencies

# Production: uses default features (production logging - no debug/trace)
# Local dev: override with --features eden_logger/full to enable full logging
eden_logger = { path = "eden_core/eden_logger", default-features = false, features = [
    "production",
] }
eden_logger_internal = { path = "eden_core/eden_logger_internal", default-features = false, features = [
    "production",
] }
wire-stream = { path = "wire-protocol/wire-stream" }
resp-wire = { path = "wire-protocol/resp-wire" }
mongo-wire = { path = "wire-protocol/mongo-wire" }
clickhouse-wire = { path = "wire-protocol/clickhouse-wire" }
weaviate-wire = { path = "wire-protocol/weaviate-wire" }
mysql-wire = { path = "wire-protocol/mysql-wire" }
postgres-wire = { path = "wire-protocol/postgres-wire" }

# crates.io dependencies: please keep alphabetically sorted!
actix = "0.13.5"
actix-cors = "0.6.5"
actix-governor = "0.8.0"
actix-http = "3.9.0"
actix-rt = "2.11.0"
actix-web = "4.12.0"
actix-web-httpauth = "0.8.2"
actix-web-prometheus = { version = "0.1.2", features = ["process"] }
aes = "0.8.4"
aes-gcm = "0.10.3"
ahash = { version = "0.8", features = ["serde"] }
anyhow = "1.0.100"
arc-swap = "1.8"
argon2 = "0.5.3"
async-stream = "0.3.6"
async-trait = "0.1.89"
awc = "3.8.1"
aws-config = "1"
aws-credential-types = "1"
aws-sdk-elasticache = "1"
aws-sdk-lambda = "1"
aws-sdk-rds = "1"
aws-sdk-s3 = "1"
aws-sigv4 = "1"
aws-smithy-runtime-api = "1"
backon = "1.6.0"
base64 = "0.22.1"
bb8 = "0.9.1"
bb8-oracle = "0.3.0"
bb8-postgres = "0.9.0"
bb8-redis = "0.23.0"
bigdecimal = "0.4.9"
bit-vec = "0.6.3"
bitflags = "2.10.0"
borsh = { version = "1.5.7", features = ["derive"] }
brotli = "3.5.0"
bson = "3"
byteorder = "1.5.0"
bytes = "1.11.0"
bytes-handoff = "1.0.0"
cbc = "0.1.2"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["cargo", "derive", "env"] }
clickhouse = { version = "0.13.3", features = ["lz4", "chrono", "uuid"] }
# Alias to avoid rustdoc/doctest crate-name collision with our internal package
# `endpoints/clickhouse` (also named `clickhouse`).
clickhouse_client = { package = "clickhouse", version = "0.13.3", features = ["lz4", "chrono", "uuid"] }
clickhouse-rs = { version = "0.13.3", features = ["lz4", "chrono", "uuid"], package = "clickhouse" }
colored = "2.2.0"
console = "0.15.11"
criterion = { version = "0.5.1", features = [
    "async",
    "async_tokio",
    "html_reports",
    "tokio",
] }
cfg-if = "1.0.4"
crossbeam-channel = "0.5.15"
crossbeam-queue = "0.3.12"
crossbeam-utils = "0.8"
crossterm = { version = "0.29", features = ["event-stream"] }
ctor = "0.2.9"
ctrlc = { version = "3.5.1", features = ["termination"] }
dashmap = "7.0.0-rc.2"
deadpool = { version = "0.12.3", features = ["managed", "rt_tokio_1"] }
deadpool-postgres = { version = "0.10.5", features = ["serde"] }
derive_builder = "0.20.2"
derive_more = { version = "1", default-features = false }
directories = "5.0"
typed-builder = "0.20"
dialoguer = { version = "0.11.0", features = ["completion", "history"] }
dotenvy = "0.15"
duckdb = { version = "1.10503.1", features = ["bundled", "chrono", "serde_json", "uuid"] }
ed25519-dalek = { version = "2.2.0", features = ["batch", "pem"] }
email_address = "0.2.9"
elsa = "1.11.2"
env_logger = "0.10.2"
fallible-iterator = "0.3.0"
fake = "4"
flate2 = "1.1"
fastrand = "2.3.0"
figment = { version = "0.10", features = ["toml", "env"] }
function_name = "0.3.0"
futures = "0.3.31"
futures-util = "0.3.31"
hex = { version = "0.4.3", features = ["serde"] }
hmac = "0.12.1"
httpmock = { version = "0.8.2", features = ["https"] }
hyper = "1.8.1"
indexmap = "2.12.1"
indextreemap = "0.1.25"
jwt = "0.16.0"
lazy_static = "1.4.0"
libc = "0.2.177"
turso = "0.6.0-pre.14"
linkme = "0.3.35"
llm = { version = "1.3.8", default-features = false, features = [
    "anthropic",
    "ollama",
    "openai",
    "openrouter",
    "rustls-tls",
] }
log = "0.4.28"
lru = "0.16.2"
memchr = "2.7.6"
moka = { version = "0.12.11", features = ["future"] }
mongodb = { version = "2.8.2", features = [
    "tokio-sync",
    "aws-auth",
    "serde_bytes",
    "bson-chrono-0_4",
] }
mysql_async = { version = "0.36.1", features = ["chrono"] }
native-tls = "0.2.14"
once_cell = "1.21.3"
opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
opentelemetry-stdout = "0.30.0"
oracle = { version = "0.6.3", features = [
    "aq_unstable",
    "chrono",
    "struct_error",
] }
oracle_client = { package = "oracle", version = "0.6.3", features = [
    "aq_unstable",
    "chrono",
    "struct_error",
] }
parking_lot = "0.12"
paste = "1.0.15"
pem = "3.0.6"
pkcs8 = { version = "0.10.2", features = ["pem"] }
pingora-core = { version = "0.8.0", features = ["rustls"] }
pingora-error = "0.8.0"
pingora-http = "0.8.0"
pingora-load-balancing = "0.8.0"
pingora-proxy = "0.8.0"
pollster = { git = "https://github.com/zesterer/pollster.git", rev = "5f595dbecb6c9d0dfacc133b88066e6a3750862c" }
postgres = { version = "0.19.12", features = [
    "array-impls",
    "with-bit-vec-0_6",
    "with-chrono-0_4",
    "with-serde_json-1",
    "with-uuid-1",
] }
postgres_client = { package = "postgres", version = "0.19.12", features = [
    "array-impls",
    "with-bit-vec-0_6",
    "with-chrono-0_4",
    "with-serde_json-1",
    "with-uuid-1",
] }
postgres-types = "0.2.11"
predictive_shuffle = "0.1.0"
proc-macro2 = "1.0.103"
prometheus = "0.13.4"
proptest = "1.9"
prost = "0.12.6"
quote = "1.0.42"
radix_trie = { version = "0.3", features = ["serde"] }
ratatui = "0.30.0"
r2d2 = "0.8.10"
rand = "0.9.2"
rand_core = "0.6.4"
rand_pcg = "0.3.1"
rand_seeder = "0.2.3"
rayon = "1.11.0"
redis = { version = "0.31.0", features = [
    "connection-manager",
    "json",
    "keep-alive",
    "r2d2",
    "streams",
    "tls-rustls",
    "tokio-comp",
    "tokio-rustls-comp",
] }
redis-protocol = { version = "6.0.0", features = [
    "bytes",
    "codec",
    "convert",
] }
aho-corasick = "1.1"
regex = "1.11.3"
regex-automata = { version = "~0.4.13", default-features = false }
regex-lite = "0.1"
reqwest = { version = "0.12.24", default-features = false, features = [
    "blocking",
    "brotli",
    "deflate",
    "gzip",
    "json",
    "rustls-tls",
    "stream",
    "zstd",
] }
rmcp = { version = "0.12", features = [
    "client",
    "server",
    "transport-async-rw",
    "transport-streamable-http-client-reqwest",
    "transport-streamable-http-server",
] }
rsa = { version = "0.9", features = ["sha2"] }
rs_merkle = "1.5.0"
rustc-hash = "2.1.1"
rustls = "0.23.35"
rustls-pemfile = "2.2.0"
rustls-pki-types = { version = "1.13.0", features = ["alloc"] }
rustls-webpki = { version = "0.103.8", features = ["alloc"] }
rustyline = { version = "15.0.0", features = ["with-file-history"] }
schemars = { version = "1.0.5", features = ["chrono04", "uuid1"] }
scylla = "1.2.0"
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serial_test = "3.2.0"
sha1 = "0.10.6"
sha2 = "0.10.9"
sha3 = "0.10.8"
shardmap = { version = "0.3.0", features = ["codec"] }
shell-words = "1.1.0"
shlex = "1.3.0"
sqlparser = { version = "0.55", features = ["visitor"] }
shuttle = "0.8.1"
smol_str = { version = "0.3.4", features = ["serde"] }
sse-stream = "0.2.0"
statsd-parser = "0.3.0"
strum = "0.27"
strum_macros = "0.27"
subtle = "2.6"
substring = "1.4.5"
syn = { version = "2.0.111", features = ["extra-traits", "full", "parsing"] }
tiberius = "0.12.3"
tiktoken-rs = "0.5"
tokio = { version = "1.48.0", features = [
    "io-util",
    "io-std",
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "fs",
    "time",
] }
tokio-native-tls = "0.3.1"
tokio-postgres = { version = "0.7.15", features = [
    "array-impls",
    "with-bit-vec-0_6",
    "with-chrono-0_4",
    "with-serde_json-1",
    "with-uuid-1",
] }
tokio-postgres-rustls = "0.13.0"
tokio-rustls = "0.26.4"
tokio-stream = "0.1.17"
tokio-tungstenite = "0.28.0"
tokio-util = "0.7.17"
toml = "0.8"
tonic = "0.11.0"
tonic-build = "0.11.0"
tracing = "0.1.41"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "registry",
] }
tui-scrollview = "0.6"
testcontainers-modules = { version = "0.14", features = [
    "redis",
    "postgres",
    "clickhouse",
    "mongo",
    "mysql",
    "oracle",
    "mssql_server",
    "surrealdb",
] }
thiserror = "1.0.69"
itoa = "1.0.15"
ufmt = "0.2"
unicode-width = "0.1.13"
urlencoding = "2.1.3"
utoipa = { version = "5.4.0", features = ["actix_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web", "vendored"] }
uuid = { version = "1.11.1", features = ["v4", "v5", "serde", "borsh"] }
webpki-roots = "1.0.4"
wiremock = "0.6.5"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Token compatibility
rusty_paseto = { version = "0.8", features = ["v4", "public"] }


[profile.release]
strip = true

[profile.bench]
inherits = "release"
lto = true
codegen-units = 1
strip = false

[profile.profiling]
inherits = "release"
debug = true
strip = false

[workspace.metadata.rust-analyzer]
rustflags = ["-D", "unused_must_use"]

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ["cfg(embedded_db)"]

[workspace.lints.clippy]
unwrap_used = "deny"
