[package]
name = "database"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eden-core = { path = "../eden_core" }
eden_config = { path = "../eden_config" }
eden_logger_internal = { workspace = true }
eden_logger = { workspace = true }
analytics_schema = { path = "analytics_schema", default-features = false }
ep-core = { path = "../endpoint-core/ep-core", default-features = false }
endpoint-schema = { path = "../endpoint-core/endpoint-schema", default-features = false }
aws-core = { path = "../endpoint-core/aws-core", optional = true }
azure-core = { path = "../endpoint-core/azure-core", optional = true }
cassandra-core = { path = "../endpoint-core/cassandra-core", optional = true }
clickhouse-core = { path = "../endpoint-core/clickhouse-core", optional = true }
databricks-core = { path = "../endpoint-core/databricks-core", optional = true }
datadog-core = { path = "../endpoint-core/datadog-core", default-features = false, optional = true }
eraser-core = { path = "../endpoint-core/eraser-core", optional = true }
function-core = { path = "../endpoint-core/function-core", optional = true }
gitlab-core = { path = "../endpoint-core/gitlab-core", optional = true }
gworkspace-core = { path = "../endpoint-core/gworkspace-core", optional = true }
http-core = { path = "../endpoint-core/http-core", optional = true }
llm-core = { path = "../endpoint-core/llm-core", optional = true }
mongo-core = { path = "../endpoint-core/mongo-core", optional = true }
mssql-core = { path = "../endpoint-core/mssql-core", optional = true }
mysql-core = { path = "../endpoint-core/mysql-core", optional = true }
oracle-core = { path = "../endpoint-core/oracle-core", optional = true }
pinecone-core = { path = "../endpoint-core/pinecone-core", optional = true }
posthog-core = { path = "../endpoint-core/posthog-core", optional = true }
postgres-core = { path = "../endpoint-core/postgres-core", optional = true }
redis-core = { path = "../endpoint-core/redis-core", optional = true }
s3-core = { path = "../endpoint-core/s3-core", optional = true }
salesforce-core = { path = "../endpoint-core/salesforce-core", optional = true }
snowflake-core = { path = "../endpoint-core/snowflake-core", optional = true }
tavily-core = { path = "../endpoint-core/tavily-core", optional = true }
weaviate-core = { path = "../endpoint-core/weaviate-core", optional = true }
utoipa = { workspace = true }
function_name = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["process"] }
serde = { workspace = true }
serde_json = { workspace = true }
borsh = { workspace = true }
shardmap = { workspace = true }
tokio-postgres = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
clickhouse = { workspace = true }
cfg-if = { workspace = true }
deadpool = { workspace = true }
duckdb = { workspace = true, optional = true }
postgres-types = { workspace = true }
bb8 = { workspace = true }
bb8-postgres = { workspace = true }
opentelemetry = { workspace = true }
aes-gcm = { workspace = true }
async-trait = { workspace = true }
argon2 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
testcontainers-modules = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
turso = { workspace = true, optional = true }
bytes = { workspace = true }
ctor = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
serial_test = { workspace = true }
uuid = { workspace = true }
testcontainers-modules = { workspace = true }
reqwest = { workspace = true }

[features]
default = []
all = [
    "aws",
    "azure",
    "cassandra",
    "clickhouse",
    "databricks",
    "datadog",
    "elasticache",
    "eraser",
    "function",
    "gitlab",
    "gworkspace",
    "http",
    "llm",
    "mongo",
    "mssql",
    "mysql",
    "oracle",
    "pinecone",
    "postgres",
    "posthog",
    "rds",
    "redis",
    "s3",
    "salesforce",
    "snowflake",
    "tavily",
    "weaviate",
]
infra-tests = []
test-utils = ["testcontainers-modules", "reqwest"]
embedded-db = ["dep:turso", "dep:duckdb", "ep-core/embedded-db", "endpoint-schema/embedded-db"]
azure = ["dep:azure-core", "endpoint-schema/azure"]
cassandra = ["dep:cassandra-core", "endpoint-schema/cassandra"]
clickhouse = ["dep:clickhouse-core", "endpoint-schema/clickhouse"]
databricks = ["dep:databricks-core", "endpoint-schema/databricks"]
datadog = ["dep:datadog-core", "endpoint-schema/datadog"]
elasticache = ["endpoint-schema/elasticache", "redis"]
eraser = ["dep:eraser-core", "endpoint-schema/eraser"]
function = ["dep:function-core", "endpoint-schema/function"]
gitlab = ["dep:gitlab-core", "endpoint-schema/gitlab"]
google_workspace = ["gworkspace"]
gworkspace = ["dep:gworkspace-core", "endpoint-schema/gworkspace"]
http = ["dep:http-core", "endpoint-schema/http"]
llm = ["dep:llm-core", "analytics_schema/llm", "endpoint-schema/llm"]
mongo = ["dep:mongo-core", "endpoint-schema/mongo"]
mssql = ["dep:mssql-core", "endpoint-schema/mssql"]
mysql = ["dep:mysql-core", "endpoint-schema/mysql"]
oracle = ["dep:oracle-core", "endpoint-schema/oracle"]
pinecone = ["dep:pinecone-core", "endpoint-schema/pinecone"]
postgres = ["dep:postgres-core", "endpoint-schema/postgres"]
posthog = ["dep:posthog-core", "endpoint-schema/posthog"]
rds = ["endpoint-schema/rds", "postgres"]
redis = ["dep:redis-core", "endpoint-schema/redis"]
s3 = ["dep:s3-core", "endpoint-schema/s3"]
salesforce = ["dep:salesforce-core", "endpoint-schema/salesforce"]
snowflake = ["dep:snowflake-core", "endpoint-schema/snowflake"]
tavily = ["dep:tavily-core", "endpoint-schema/tavily"]
weaviate = ["dep:weaviate-core", "endpoint-schema/weaviate"]
aws = ["dep:aws-core", "endpoint-schema/aws", "function", "s3", "rds", "elasticache"]

[lints]
workspace = true
