[package]
name = "eden_alerts"
version = "0.1.0"
edition = "2024"
description = "Standalone alerting service for ClickHouse analytics. Watches rollups and dispatches notifications"

[[bin]]
name = "eden-alerts"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
chrono = { workspace = true }
clickhouse = { workspace = true }
clap = { workspace = true, features = ["env"] }
parking_lot = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
strum = { workspace = true, features = ["derive"] }
async-trait = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
