[package]
name = "eden_config"
version = "0.1.0"
edition = "2021"

[dependencies]
figment = { workspace = true }
arc-swap = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
figment = { version = "0.10", features = ["test"] }
serde_json = { workspace = true }
serial_test = { workspace = true }
toml = { workspace = true }
